# ros_files_personal

./: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  catkin_make.cache  cmake_install.cmake
devel/: _setup_util.py  local_setup.sh  setup.sh
devel/lib/beginner_tutorials/: add_two_ints_client.py  add_two_ints_server.py  listener  listener.py  talker  talker.py
devel/lib/pkgconfig/: beginner_tutorials.pc
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/gennodejs/ros/beginner_tutorials/msg/: Num.js
devel/share/roseus/ros/beginner_tutorials/: manifest.l
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/launch/: turtlemimic.launch
src/beginner_tutorials/scripts/: listener.py  talker.py
src/beginner_tutorials/src/: listener.cpp  talker.cpp
